Enhance metadata handling and session storage methods; add test user and improve type safety

--- a/BackEnd/connexion/exemple.ini
+++ b/BackEnd/connexion/exemple.ini
@@ -1,3 +1,4 @@
 [USERS]
 johndoe = {'username': 'johndoe', 'full_name': 'John Doe', 'email': 'johndoe@example.com', 'hashed_password': '$2b$12$EixZaYVK1fsbw1ZfbX3OXePaWxn96p36WQoeG6Lruj3vjPGga31lW', 'disabled': False}
+test = {"username": "Test", "full_name": "test test", "email": "test.test@test.com", "hashed_password": "$2b$12$Owvl6kVLRp7/4r0RizUUQuGRBSRbRmBxQ4E9CQPtG1iOh5oLeDyXa", "disabled": "False"}
 
