♻ refactor module connexion

--- a/BackEnd/connexion/exemple.conf
+++ b/BackEnd/connexion/exemple.conf
@@ -1,4 +1,4 @@
 [USERS]
-johndoe = {'username': 'johndoe', 'full_name': 'John Doe', 'email': 'johndoe@example.com', 'hashed_password': '$2b$12$EixZaYVK1fsbw1ZfbX3OXePaWxn96p36WQoeG6Lruj3vjPGga31lW', 'disabled': False, 'admin': True}
-notadmin = {'username': 'notAdmin', 'full_name': '<NAME>', 'email': '<EMAIL>', 'disabled': False, 'hashed_password': '$2b$12$EixZaYVK1fsbw1ZfbX3OXePaWxn96p36WQoeG6Lruj3vjPGga31lW', 'admin': False}
+johndoe = {'username': 'johndoe', 'hashed_password': '$2b$12$EixZaYVK1fsbw1ZfbX3OXePaWxn96p36WQoeG6Lruj3vjPGga31lW', 'disabled': False, 'admin': True}
+notadmin = {'username': 'notAdmin', 'hashed_password': '$2b$12$EixZaYVK1fsbw1ZfbX3OXePaWxn96p36WQoeG6Lruj3vjPGga31lW', 'disabled': False, 'admin': False}
 
