--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.2.0",
-    "@angular/cli": "~16.2.0",
+    "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "esbuild": "0.25.0",
